# eterra-polkadot-sdk-solochain-template

./: Cargo.toml  README.md  metadata.json  metadata.txt
crates/eterra-card-ai-adapter/: Cargo.toml
crates/eterra-card-ai-adapter/src/: lib.rs
node/src/: chain_spec.rs
pallets/eterra/: Cargo.toml  README.md
pallets/eterra-daily-slots/: Cargo.toml
pallets/eterra-daily-slots/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-faucet/: Cargo.toml
pallets/eterra-faucet/src/: lib.rs
pallets/eterra-gamer/: Cargo.toml  README.md
pallets/eterra-gamer/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-monte-carlo-ai/: Cargo.toml
pallets/eterra-monte-carlo-ai/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-simple-matchmaker/: Cargo.toml
pallets/eterra-simple-matchmaker/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-simple-tcg/: Cargo.toml  README.md
pallets/eterra-simple-tcg/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-slots/: Cargo.toml
pallets/eterra-slots/src/: lib.rs  mock.rs  tests.rs
pallets/eterra-tcg/: Cargo.toml
pallets/eterra-tcg/src/: lib.rs  mock.rs
pallets/eterra/src/: Test.md  lib.rs  mock.rs  pallet_eterra_test_suggestions.md  tests.rs
pallets/eterra/src/types/: board.rs  card.rs  game.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
