[package]
name = "eterra-card-ai-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
pallet-eterra-monte-carlo-ai = { path = "../../pallets/eterra-monte-carlo-ai", default-features = false }
parity-scale-codec          = { workspace = true, default-features = false, features = ["derive","max-encoded-len"] }
scale-info                  = { workspace = true, default-features = false, features = ["derive"] }
sp-std                      = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "pallet-eterra-monte-carlo-ai/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-std/std",
]