[package]
name = "pallet-eterra-daily-slots"
description = "Slot machine pallet for Substrate"
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General (wasm)
log = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
schnorrkel = { version = "0.11.4", default-features = false }

# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-timestamp   = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-io   = { workspace = true }
sp-std             = { workspace = true }
sp-runtime         = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true, features = ["std"] }
sp-core = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
