[package]
name = "pallet-eterra-gamer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
scale-info         = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }

sp-std             = { workspace = true }
sp-runtime         = { workspace = true }
sp-core = { workspace = true }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "scale-info/std",
  "parity-scale-codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
