[package]
name = "pallet-eterra-monte-carlo-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, default-features = false, features = ["derive"] }
frame-support      = { workspace = true, default-features = false }
frame-system       = { workspace = true, default-features = false }
sp-runtime         = { workspace = true, default-features = false }
sp-std             = { workspace = true, default-features = false }
sp-io              = { workspace = true, default-features = false }
sp-core            = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
]
