[package]
name = "pallet-eterra-simple-matchmaker"
version = "0.1.0"
edition = "2021"
authors = ["Eterra Devs"]
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system  = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info    = { workspace = true, features = ["derive"] }
sp-io         = { workspace = true, default-features = false }
sp-std        = { workspace = true, default-features = false }
sp-runtime    = { workspace = true, default-features = false }

[dev-dependencies]
sp-core    = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
]