[package]
name = "pallet-eterra-simple-tcg"
description = "Trading Card pallet for Substrate"
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General (wasm)
log = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
schnorrkel = { version = "0.11.4", default-features = false }

# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-io   = { workspace = true }
sp-std             = { workspace = true }
sp-runtime         = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]