[package]
name = "pallet-eterra"
description = "Card game pallet for Substrate"
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General (wasm)
log = { workspace = true }
hex = { workspace = true, features = ["alloc"] }

# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-io   = { workspace = true }
sp-std             = { workspace = true }
sp-runtime         = { workspace = true }
pallet-balances = { workspace = true, default-features = false }

# eterra
pallet-eterra-simple-tcg = { workspace = true, default-features = false }
eterra-card-ai-adapter = { path = "../../crates/eterra-card-ai-adapter", default-features = false }
pallet-eterra-monte-carlo-ai = { path = "../eterra-monte-carlo-ai", default-features = false }
pallet-eterra-simple-matchmaker = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
	"frame-support/std",
	"frame-system/std",
  "pallet-balances/std",
  "eterra-card-ai-adapter/std",
  "pallet-eterra-monte-carlo-ai/std",
  "pallet-eterra-simple-matchmaker/std",
]
try-runtime = ["frame-support/try-runtime"]